--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,3 +1,11 @@
 \chapter*{Acknowledgements} %I use an asterisk because I don't want my acknowledgements in the table of contents. I use \chapter to make sure that the acknowledgements go on the correct side of the page when you print out the dissertation.
 
 acknowledgements go here
+
+%% to my parents, my first teachers (dedication separate?)
+%% brian, bill
+%% postdocs: aaron, soumya
+%% fellow physics grad students: laura, russell, ryne, josh, matt, zach (other group members)
+%% Brad, Devon, and Leah
+%% Kate
+%% etc.
