--- a/thesis.bib
+++ b/thesis.bib
@@ -1,3 +1,136 @@
+@article{Aad:2008zzm,
+      author         = "Aad, G. and others",
+      title          = "{The ATLAS Experiment at the CERN Large Hadron Collider}",
+      collaboration  = "ATLAS",
+      journal        = "JINST",
+      volume         = "3",
+      year           = "2008",
+      pages          = "S08003",
+      doi            = "10.1088/1748-0221/3/08/S08003",
+      SLACcitation   = "%%CITATION = JINST,3,S08003;%%"
+}
+@article{Aad:2012tfa,
+      author         = "Aad, Georges and others",
+      title          = "{Observation of a new particle in the search for the
+                        Standard Model Higgs boson with the ATLAS detector at the
+                        LHC}",
+      collaboration  = "ATLAS",
+      journal        = "Phys. Lett.",
+      volume         = "B716",
+      year           = "2012",
+      pages          = "1-29",
+      doi            = "10.1016/j.physletb.2012.08.020",
+      eprint         = "1207.7214",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2012-218",
+      SLACcitation   = "%%CITATION = ARXIV:1207.7214;%%"
+}
+@article{Aaij:2015tga,
+      author         = "Aaij, Roel and others",
+      title          = "{Observation of $J/\psi p$ Resonances Consistent with
+                        Pentaquark States in $\Lambda_b^0 \to J/\psi K^- p$
+                        Decays}",
+      collaboration  = "LHCb",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "115",
+      year           = "2015",
+      pages          = "072001",
+      doi            = "10.1103/PhysRevLett.115.072001",
+      eprint         = "1507.03414",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2015-153, LHCB-PAPER-2015-029",
+      SLACcitation   = "%%CITATION = ARXIV:1507.03414;%%"
+}
+@article{Aamodt:2008zz,
+      author         = "Aamodt, K. and others",
+      title          = "{The ALICE experiment at the CERN LHC}",
+      collaboration  = "ALICE",
+      journal        = "JINST",
+      volume         = "3",
+      year           = "2008",
+      pages          = "S08002",
+      doi            = "10.1088/1748-0221/3/08/S08002",
+      SLACcitation   = "%%CITATION = JINST,3,S08002;%%"
+}
+@article{Acharya:2014nyr,
+      author         = "Acharya, B. and others",
+      title          = "{The Physics Programme Of The MoEDAL Experiment At The
+                        LHC}",
+      collaboration  = "MoEDAL",
+      journal        = "Int. J. Mod. Phys.",
+      volume         = "A29",
+      year           = "2014",
+      pages          = "1430050",
+      doi            = "10.1142/S0217751X14300506",
+      eprint         = "1405.7662",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "KCL-PH-TH-2014-02, LCTS-2014-02, CERN-PH-TH-2014-021,
+                        IFIC-14-16, IMPERIAL-TP-2014-AR-1",
+      SLACcitation   = "%%CITATION = ARXIV:1405.7662;%%"
+}
+@article{Adriani:2008zz,
+      author         = "Adriani, O. and others",
+      title          = "{The LHCf detector at the CERN Large Hadron Collider}",
+      collaboration  = "LHCf",
+      journal        = "JINST",
+      volume         = "3",
+      year           = "2008",
+      pages          = "S08006",
+      doi            = "10.1088/1748-0221/3/08/S08006",
+      SLACcitation   = "%%CITATION = JINST,3,S08006;%%"
+}
+@article{Alves:2008zz,
+      author         = "Alves, Jr., A. Augusto and others",
+      title          = "{The LHCb Detector at the LHC}",
+      collaboration  = "LHCb",
+      journal        = "JINST",
+      volume         = "3",
+      year           = "2008",
+      pages          = "S08005",
+      doi            = "10.1088/1748-0221/3/08/S08005",
+      SLACcitation   = "%%CITATION = JINST,3,S08005;%%"
+}
+@article{Anelli:2008zza,
+      author         = "Anelli, G. and others",
+      title          = "{The TOTEM experiment at the CERN Large Hadron Collider}",
+      collaboration  = "TOTEM",
+      journal        = "JINST",
+      volume         = "3",
+      year           = "2008",
+      pages          = "S08007",
+      doi            = "10.1088/1748-0221/3/08/S08007",
+      SLACcitation   = "%%CITATION = JINST,3,S08007;%%"
+}
+@article{Chatrchyan:2008aa,
+      author         = "Chatrchyan, S. and others",
+      title          = "{The CMS Experiment at the CERN LHC}",
+      collaboration  = "CMS",
+      journal        = "JINST",
+      volume         = "3",
+      year           = "2008",
+      pages          = "S08004",
+      doi            = "10.1088/1748-0221/3/08/S08004",
+      SLACcitation   = "%%CITATION = JINST,3,S08004;%%"
+}
+@article{Chatrchyan:2012xdj,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Observation of a new boson at a mass of 125 GeV with the
+                        CMS experiment at the LHC}",
+      collaboration  = "CMS",
+      journal        = "Phys. Lett.",
+      volume         = "B716",
+      year           = "2012",
+      pages          = "30-61",
+      doi            = "10.1016/j.physletb.2012.08.021",
+      eprint         = "1207.7235",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-HIG-12-028, CERN-PH-EP-2012-220",
+      SLACcitation   = "%%CITATION = ARXIV:1207.7235;%%"
+}
 @article{Danielewicz:1984ww,
       author         = "Danielewicz, P. and Gyulassy, M.",
       title          = "{Dissipative Phenomena in Quark Gluon Plasmas}",
