changed title to be slightly less boring

--- a/thesis.tex
+++ b/thesis.tex
@@ -163,7 +163,7 @@
 \expandafter\def\expandafter\quote\expandafter{\quote\SingleSpace} %Keep all block quotes single-spaced regardless of body text spacing.
 \pagestyle{plain} %Put page numbers at the bottom-center for the whole dissertation. Columbia's dissertation office requires that the numbers appear at this location on the page throughout the document.
 
-\newcommand{\thesisTitle}{Signatures of hydrodynamics  in $\sqrt{s_\mathrm{NN}} = 5.02~\TeV$ proton-lead collisions using femtoscopy with the ATLAS detector at the Large Hadron Collider}
+\newcommand{\thesisTitle}{Femtoscopic signatures of hydrodynamics in central proton-lead collisions at $\sqrt{s_\mathrm{NN}} = 5.02~\TeV$ with the ATLAS detector at the Large Hadron Collider}
 \newcommand{\myName}{Michael R. Clark}
 \newcommand{\abstractText}{
 abstract text here
