small author change

--- a/thesis.tex
+++ b/thesis.tex
@@ -120,7 +120,7 @@
 %-------------------------------------------------------------------------------
 
 % Author and title for the PDF file
-\hypersetup{pdftitle={ATLAS Thesis},pdfauthor={Michael (Felix) R. Clark}}
+\hypersetup{pdftitle={ATLAS Thesis},pdfauthor={Michael (Felix) Clark}}
 
 %-------------------------------------------------------------------------------
 % Content
