--- a/thesis.bib
+++ b/thesis.bib
@@ -206,3 +206,14 @@
       primaryClass   = "hep-th",
       SLACcitation   = "%%CITATION = ARXIV:1704.08699;%%"
 }
+@article{Rutherford:1911zz,
+      author         = "Rutherford, E.",
+      title          = "{The scattering of alpha and beta particles by matter and
+                        the structure of the atom}",
+      journal        = "Phil. Mag. Ser.6",
+      volume         = "21",
+      year           = "1911",
+      pages          = "669-688",
+      doi            = "10.1080/14786440508637080",
+      SLACcitation   = "%%CITATION = INSPIRE-45404;%%"
+}
