--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -8,4 +8,5 @@ acknowledgements go here
 %% fellow physics grad students: laura, russell, ryne, josh, matt, zach (other group members)
 %% Brad, Devon, and Leah
 %% Kate
+%% Grandma June & GG & grandparents
 %% etc.
