--- a/thesis.bib
+++ b/thesis.bib
@@ -198,6 +198,20 @@
       primaryClass   = "nucl-ex",
       SLACcitation   = "%%CITATION = ARXIV:1801.03477;%%"
 }
+@article{PhysRev.43.149,
+  title = {The Electrostatic Production of High Voltage for Nuclear Investigations},
+  author = {Van de Graaff, R. J. and Compton, K. T. and Van Atta, L. C.},
+  journal = {Phys. Rev.},
+  volume = {43},
+  issue = {3},
+  pages = {149--157},
+  numpages = {0},
+  year = {1933},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRev.43.149},
+  url = {https://link.aps.org/doi/10.1103/PhysRev.43.149}
+}
 @article{Romatschke:2016hle,
       author         = "Romatschke, Paul",
       title          = "{Do nuclear collisions create a locally equilibrated
@@ -238,3 +252,4 @@
       doi            = "10.1080/14786440508637080",
       SLACcitation   = "%%CITATION = INSPIRE-45404;%%"
 }
+
