adding injection chain figure

--- a/thesis.bib
+++ b/thesis.bib
@@ -188,6 +188,16 @@
       reportNumber   = "INT-PUB-04-09, UW-PT-04-04",
       SLACcitation   = "%%CITATION = HEP-TH/0405231;%%"
 }
+@article{Mobs:2197559,
+      author        = "Mobs, Esma",
+      title         = "{The CERN accelerator complex. Complexe des
+                       accélérateurs du CERN}",
+      month         = "Jul",
+      year          = "2016",
+      reportNumber  = "OPEN-PHO-ACCEL-2016-009",
+      url           = "https://cds.cern.ch/record/2197559",
+      note          = "General Photo",
+}
 @article{Nagle:2018nvi,
       author         = "Nagle, James L. and Zajc, William A.",
       title          = "{Small System Collectivity in Relativistic Hadron and
