line number patch for equation spacing

--- a/thesis.tex
+++ b/thesis.tex
@@ -92,6 +92,7 @@
 %% comment this out for final version
 \usepackage{lineno}
 \linenumbers
+\include{linenopatch}
 
 \let\newfloat\undefined
 \usepackage{floatrow}
