changed to most modern figure of accelerator complex

--- a/thesis.bib
+++ b/thesis.bib
@@ -188,14 +188,14 @@
       reportNumber   = "INT-PUB-04-09, UW-PT-04-04",
       SLACcitation   = "%%CITATION = HEP-TH/0405231;%%"
 }
-@article{Mobs:2197559,
+@article{Mobs:2636343,
       author        = "Mobs, Esma",
-      title         = "{The CERN accelerator complex. Complexe des
-                       accélérateurs du CERN}",
-      month         = "Jul",
-      year          = "2016",
-      reportNumber  = "OPEN-PHO-ACCEL-2016-009",
-      url           = "https://cds.cern.ch/record/2197559",
+      title         = "{The CERN accelerator complex - August 2018. Complexe des
+                       accélérateurs du CERN - Août 2018}",
+      month         = "Aug",
+      year          = "2018",
+      reportNumber  = "OPEN-PHO-ACCEL-2018-005",
+      url           = "https://cds.cern.ch/record/2636343",
       note          = "General Photo",
 }
 @article{Nagle:2018nvi,
