injector chain and main ring

--- a/thesis.bib
+++ b/thesis.bib
@@ -125,6 +125,22 @@
       doi            = "10.1088/1748-0221/3/08/S08007",
       SLACcitation   = "%%CITATION = JINST,3,S08007;%%"
 }
+@article{Benedikt:2004wm,
+      author         = "Benedikt, M. and Collier, P. and Mertens, V. and Poole,
+                       J. and Schindl, K.",
+      title          = "{LHC Design Report. 3. The LHC injector chain}",
+      year           = "2004",
+      reportNumber   = "CERN-2004-003-V-3, CERN-2004-003",
+      SLACcitation   = "%%CITATION = CERN-2004-003-V-3;%%"
+}
+@article{Bruning:2004ej,
+      author         = "Bruning, Oliver S. and Collier, P. and Lebrun, P. and
+                        Myers, S. and Ostojic, R. and Poole, J. and Proudlock, P.",
+      title          = "{LHC Design Report Vol.1: The LHC Main Ring}",
+      year           = "2004",
+      reportNumber   = "CERN-2004-003-V1, CERN-2004-003, CERN-2004-003-V-1",
+      SLACcitation   = "%%CITATION = CERN-2004-003-V1;%%"
+}
 @article{Chatrchyan:2008aa,
       author         = "Chatrchyan, S. and others",
       title          = "{The CMS Experiment at the CERN LHC}",
@@ -261,5 +277,14 @@
       pages          = "669-688",
       doi            = "10.1080/14786440508637080",
       SLACcitation   = "%%CITATION = INSPIRE-45404;%%"
+}
+@unpublished{Valeriane:843195,
+      author        = "Valeriane Duvivier",
+      title         = "{Cross section of LHC dipole.. Dipole LHC: Coupe
+                       transversale.}",
+      year          = "2001",
+      reportNumber  = "LHC-PHO-2001-187",
+      url           = "http://cds.cern.ch/record/843195",
+      note          = "AC Collection. Legacy of AC. Pictures from 1992 to 2002.",
 }
 
