--- a/thesis-defs.sty
+++ b/thesis-defs.sty
@@ -233,6 +233,10 @@ $\hfil\tilde{}\hfil$\crcr\noalign{\kern1.5pt}}}}}
 
 %% my additions
 
+\newcommand{\MeVn}{\MeV/\textrm{n}}
+\newcommand{\GeVn}{\GeV/\textrm{n}}
+\newcommand{\TeVn}{\TeV/\textrm{n}}
+
 %% \newcommand{\PbPbenergy}{$\sqrt{s_{\mathrm{NN}}}=2.76~\tev$\xspace}
 \newcommand{\pPbenergy}{$\sqrt{s_{\mathrm{NN}}}=5.02~\tev$\xspace}
 \newcommand{\ppenergy}{$\sqs =13$~\TeV\xspace}
