some luminosity and style

--- a/thesis-defs.sty
+++ b/thesis-defs.sty
@@ -1,5 +1,6 @@
 \usepackage{xspace}
-\newcommand{\Lagr}{\ensuremath{\mathcal{L}}\xspace}
+%% \newcommand{\Lagr}{\ensuremath{\mathcal{L}}\xspace}
+\newcommand{\Lagr}{\ensuremath{\mathscr{L}}\xspace} %% try mathscr
 \newcommand{\dmu}{\ensuremath{\partial_\mu}}
 \newcommand{\dmuup}{\ensuremath{\partial^\mu}}
 \newcommand{\Dmu}{\ensuremath{D_\mu}}
