--- a/thesis.tex
+++ b/thesis.tex
@@ -23,6 +23,7 @@
 \usepackage{rotating}
 \usepackage{multirow}
 \usepackage{bm}
+\usepackage{mathrsfs}
 
 % \addto\captionsdutch{%
 %   \renewcommand{\appendixname}%
