--- a/thesis.bib
+++ b/thesis.bib
@@ -278,6 +278,18 @@
       doi            = "10.1080/14786440508637080",
       SLACcitation   = "%%CITATION = INSPIRE-45404;%%"
 }
+@article{Tanabashi:2018oca,
+      author         = "Tanabashi, M. and others",
+      title          = "{Review of Particle Physics}",
+      collaboration  = "Particle Data Group",
+      journal        = "Phys. Rev.",
+      volume         = "D98",
+      year           = "2018",
+      number         = "3",
+      pages          = "030001",
+      doi            = "10.1103/PhysRevD.98.030001",
+      SLACcitation   = "%%CITATION = PHRVA,D98,030001;%%"
+}
 @unpublished{Valeriane:843195,
       author        = "Valeriane Duvivier",
       title         = "{Cross section of LHC dipole.. Dipole LHC: Coupe
