--- a/thesis-defs.sty
+++ b/thesis-defs.sty
@@ -1,6 +1,5 @@
 \usepackage{xspace}
-%% \newcommand{\Lagr}{\ensuremath{\mathcal{L}}\xspace}
-\newcommand{\Lagr}{\ensuremath{\mathscr{L}}\xspace} %% try mathscr
+\newcommand{\Lagr}{\ensuremath{\mathcal{L}}\xspace}
 \newcommand{\dmu}{\ensuremath{\partial_\mu}}
 \newcommand{\dmuup}{\ensuremath{\partial^\mu}}
 \newcommand{\Dmu}{\ensuremath{D_\mu}}
@@ -237,6 +236,9 @@ $\hfil\tilde{}\hfil$\crcr\noalign{\kern1.5pt}}}}}
 \newcommand{\MeVn}{\MeV/\textrm{n}}
 \newcommand{\GeVn}{\GeV/\textrm{n}}
 \newcommand{\TeVn}{\TeV/\textrm{n}}
+
+\newcommand{\Lumi}{\ensuremath{\mathscr{L}}\xspace}
+\newcommand{\Lint}{\ensuremath{L_\mathrm{int}}\xspace}
 
 %% \newcommand{\PbPbenergy}{$\sqrt{s_{\mathrm{NN}}}=2.76~\tev$\xspace}
 \newcommand{\pPbenergy}{$\sqrt{s_{\mathrm{NN}}}=5.02~\tev$\xspace}
