moving image to proper bib source

--- a/bibtex/bib/images.bib
+++ b/bibtex/bib/images.bib
@@ -1,3 +1,13 @@
+@article{Mobs:2636343,
+      author        = "Mobs, Esma",
+      title         = "{The CERN accelerator complex - August 2018. Complexe des
+                       accélérateurs du CERN - Août 2018}",
+      month         = "Aug",
+      year          = "2018",
+      reportNumber  = "OPEN-PHO-ACCEL-2018-005",
+      url           = "https://cds.cern.ch/record/2636343",
+      note          = "General Photo",
+}
 @unpublished{Pequenao:1095924,
       author        = "Joao Pequenao",
       title         = "{Computer generated image of the whole ATLAS detector}",
