references and images

--- a/bibtex/bib/techreport.bib
+++ b/bibtex/bib/techreport.bib
@@ -33,6 +33,21 @@
       primaryClass   = "physics.ins-det",
       SLACcitation   = "%%CITATION = ARXIV:1004.5293;%%"
 }
+@article{Aad:2012xs,
+      author         = "{ATLAS Collaboration}",
+      title          = "{Performance of the ATLAS Trigger System in 2010}",
+      collaboration  = "ATLAS",
+      journal        = "Eur. Phys. J.",
+      volume         = "C72",
+      year           = "2012",
+      pages          = "1849",
+      doi            = "10.1140/epjc/s10052-011-1849-1",
+      eprint         = "1110.1530",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2011-078",
+      SLACcitation   = "%%CITATION = ARXIV:1110.1530;%%"
+}
 @article{Aamodt:2008zz,
       author         = "Aamodt, K. and others",
       title          = "{The ALICE experiment at the CERN LHC}",
@@ -72,6 +87,15 @@
       doi            = "10.1088/1748-0221/3/08/S08006",
       SLACcitation   = "%%CITATION = JINST,3,S08006;%%"
 }
+@article{Airapetian:1996iv,
+      author         = "{ATLAS Collaboration}",
+      title          = "{ATLAS calorimeter performance Technical Design Report}",
+      collaboration  = "ATLAS",
+      year           = "1996",
+      reportNumber   = "CERN-LHCC-96-40",
+      url            = "http://cds.cern.ch/record/331059",
+      SLACcitation   = "%%CITATION = CERN-LHCC-96-40;%%"
+}
 @article{Alves:2008zz,
       author         = "Alves, Jr., A. Augusto and others",
       title          = "{The LHCb Detector at the LHC}",
@@ -94,6 +118,25 @@
       doi            = "10.1088/1748-0221/3/08/S08007",
       SLACcitation   = "%%CITATION = JINST,3,S08007;%%"
 }
+@article{ATLAS:1996aa,
+      author         = "{ATLAS Collaboration}",
+      title          = "{ATLAS tile calorimeter: Technical design report}",
+      collaboration  = "ATLAS",
+      year           = "1996",
+      reportNumber   = "CERN-LHCC-96-42",
+      url           = "http://cds.cern.ch/record/331062",
+      SLACcitation   = "%%CITATION = CERN-LHCC-96-42;%%"
+}
+@article{ATLAS:1996ab,
+      author         = "{ATLAS Collaboration}",
+      title          = "{ATLAS liquid argon calorimeter: Technical design
+                        report}",
+      collaboration  = "ATLAS",
+      year           = "1996",
+      reportNumber   = "CERN-LHCC-96-41",
+      url           = "http://cds.cern.ch/record/331061",
+      SLACcitation   = "%%CITATION = CERN-LHCC-96-41;%%"
+}
 @article{ATLAS:1997ad,
       author         = "{ATLAS Collaboration}",
       title          = "{ATLAS muon spectrometer: Technical design report}",
@@ -102,6 +145,15 @@
       reportNumber   = "CERN-LHCC-97-22, ATLAS-TDR-10",
       url            = "http://cds.cern.ch/record/331068",
       SLACcitation   = "%%CITATION = CERN-LHCC-97-22;%%"
+}
+@article{ATLAS:1997ae,
+      author         = "{ATLAS Collaboration}",
+      title          = "{ATLAS magnet system: Technical design report}",
+      collaboration  = "ATLAS",
+      year           = "1997",
+      reportNumber   = "CERN-LHCC-97-18",
+      url           = "http://cds.cern.ch/record/338080",
+      SLACcitation   = "%%CITATION = CERN-LHCC-97-18;%%"
 }
 @article{ATLAS:1997ag,
       author         = "{ATLAS Collaboration}",
@@ -120,6 +172,23 @@
       reportNumber   = "CERN-LHCC-97-17",
       url            = "http://cds.cern.ch/record/331064",
       SLACcitation   = "%%CITATION = CERN-LHCC-97-17;%%"
+}
+@article{ATLAS:1998ad,
+      title          = "{ATLAS first level trigger: Technical design report}",
+      collaboration  = "ATLAS",
+      year           = "1998",
+      reportNumber   = "CERN-LHCC-98-14, ATLAS-TDR-12",
+      url            = "http://cds.cern.ch/record/381429",
+      SLACcitation   = "%%CITATION = CERN-LHCC-98-14;%%"
+}
+@article{ATLAS:2003aa,
+      title          = "{ATLAS high-level trigger, data acquisition and controls:
+                        Technical design report}",
+      collaboration  = "ATLAS",
+      year           = "2003",
+      reportNumber   = "CERN-LHCC-2003-022, ATLAS-TRD-016",
+      url            = "http://cds.cern.ch/record/616089",
+      SLACcitation   = "%%CITATION = CERN-LHCC-2003-022;%%"
 }
 @article{Bruning:2004ej,
       author         = "Bruning, Oliver S. and Collier, P. and Lebrun, P. and
