subdividing ID sections and adding refernces, mentioning a few other detectors

--- a/bibtex/bib/techreport.bib
+++ b/bibtex/bib/techreport.bib
@@ -8,6 +8,17 @@
       doi            = "10.1088/1748-0221/3/08/S08001",
       SLACcitation   = "%%CITATION = JINST,3,S08001;%%"
 }
+@article{Aad:2008zz,
+      author         = "Aad, G. and others",
+      title          = "{ATLAS pixel detector electronics and sensors}",
+      journal        = "JINST",
+      volume         = "3",
+      year           = "2008",
+      pages          = "P07007",
+      doi            = "10.1088/1748-0221/3/07/P07007",
+      url            = "http://cds.cern.ch/record/1119279",
+      SLACcitation   = "%%CITATION = JINST,3,P07007;%%"
+}
 @article{Aad:2008zzm,
       author         = "{ATLAS Collaboration}",
       title          = "{The ATLAS Experiment at the CERN Large Hadron Collider}",
@@ -48,6 +59,22 @@
       reportNumber   = "CERN-PH-EP-2011-078",
       SLACcitation   = "%%CITATION = ARXIV:1110.1530;%%"
 }
+@article{Aad:2014mta,
+      author         = "Aad, Georges and others",
+      title          = "{Operation and performance of the ATLAS semiconductor
+                        tracker}",
+      collaboration  = "ATLAS",
+      journal        = "JINST",
+      volume         = "9",
+      year           = "2014",
+      pages          = "P08009",
+      doi            = "10.1088/1748-0221/9/08/P08009",
+      eprint         = "1404.7473",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2014-049",
+      SLACcitation   = "%%CITATION = ARXIV:1404.7473;%%"
+}
 @article{Aamodt:2008zz,
       author         = "Aamodt, K. and others",
       title          = "{The ALICE experiment at the CERN LHC}",
@@ -58,6 +85,18 @@
       pages          = "S08002",
       doi            = "10.1088/1748-0221/3/08/S08002",
       SLACcitation   = "%%CITATION = JINST,3,S08002;%%"
+}
+@article{Abat:2008zza,
+      author         = "Abat, E. and others",
+      title          = "{The ATLAS Transition Radiation Tracker (TRT)
+                        proportional drift tube: Design and performance}",
+      collaboration  = "ATLAS TRT",
+      journal        = "JINST",
+      volume         = "3",
+      year           = "2008",
+      pages          = "P02013",
+      doi            = "10.1088/1748-0221/3/02/P02013",
+      SLACcitation   = "%%CITATION = JINST,3,P02013;%%"
 }
 @article{Acharya:2014nyr,
       author         = "Acharya, B. and others",
