--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -73,3 +73,15 @@
       primaryClass   = "hep-th",
       SLACcitation   = "%%CITATION = ARXIV:1704.08699;%%"
 }
+@article{Tanabashi:2018oca,
+      author         = "Tanabashi, M. and others",
+      title          = "{Review of Particle Physics}",
+      collaboration  = "Particle Data Group",
+      journal        = "Phys. Rev.",
+      volume         = "D98",
+      year           = "2018",
+      number         = "3",
+      pages          = "030001",
+      doi            = "10.1103/PhysRevD.98.030001",
+      SLACcitation   = "%%CITATION = PHRVA,D98,030001;%%"
+}
