--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -8,6 +8,17 @@
       doi            = "10.1103/PhysRevD.31.53",
       SLACcitation   = "%%CITATION = PHRVA,D31,53;%%"
 }
+@article{Fabjan:2003aq,
+      author         = "Fabjan, C. W. and Gianotti, F.",
+      title          = "{Calorimetry for particle physics}",
+      journal        = "Rev. Mod. Phys.",
+      volume         = "75",
+      year           = "2003",
+      pages          = "1243-1286",
+      doi            = "10.1103/RevModPhys.75.1243",
+      reportNumber   = "CERN-EP-2003-075",
+      SLACcitation   = "%%CITATION = RMPHA,75,1243;%%"
+}
 @article{Gross:1973ju,
       author         = "Gross, D. J. and Wilczek, Frank",
       title          = "{Asymptotically Free Gauge Theories - I}",
