--- a/bibtex/bib/techreport.bib
+++ b/bibtex/bib/techreport.bib
@@ -256,3 +256,14 @@
       doi            = "10.1088/1748-0221/3/08/S08004",
       SLACcitation   = "%%CITATION = JINST,3,S08004;%%"
 }
+@article{Cornelissen:2007vba,
+      author         = "Cornelissen, T. and Elsing, M. and Fleischmann, S. and
+                        Liebig, W. and Moyse, E.",
+      editor         = "Salzburger, A.",
+      title          = "{Concepts, Design and Implementation of the ATLAS New
+                        Tracking (NEWT)}",
+      year           = "2007",
+      reportNumber   = "ATL-SOFT-PUB-2007-007, ATL-COM-SOFT-2007-002",
+      url            = "http://cds.cern.ch/record/1020106",
+      SLACcitation   = "%%CITATION = ATL-SOFT-PUB-2007-007;%%"
+}
