interaction point acronym

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -10,6 +10,7 @@
   \acro{HEC}{hadronic end-cap}
   \acro{HLT}{High Level Trigger}
   \acro{ID}{inner detector}
+  \acro{IP}{interaction point}
   \acro{L1}{Level-1}
   \acro{L2}{Level-2}
   \acro{LAr}{liquid argon}
