chi2 fitter reference

--- a/bibtex/bib/techreport.bib
+++ b/bibtex/bib/techreport.bib
@@ -267,3 +267,18 @@
       url            = "http://cds.cern.ch/record/1020106",
       SLACcitation   = "%%CITATION = ATL-SOFT-PUB-2007-007;%%"
 }
+@article{Cornelissen:2008zza,
+      author         = "Cornelissen, Thijs G. and Elsing, M. and Gavrilenko, I.
+                        and Laporte, J. F. and Liebig, W. and Limper, M. and
+                        Nikolopoulos, K. and Poppleton, A. and Salzburger, A.",
+      title          = "{The global $\chi^2$ track fitter in ATLAS}",
+      booktitle      = "{Proceedings, 16th International Conference on Computing
+                        in High Energy and Nuclear Physics (CHEP 2007): Victoria,
+                        Canada, September 2-7, 2007}",
+      journal        = "J. Phys. Conf. Ser.",
+      volume         = "119",
+      year           = "2008",
+      pages          = "032013",
+      doi            = "10.1088/1742-6596/119/3/032013",
+      SLACcitation   = "%%CITATION = 00462,119,032013;%%"
+}
