descriptions and references for track reco

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -3,6 +3,7 @@
 \begin{acronym}
   \acro{CTP}{central trigger processor}
   \acro{CGC}{color-glass condensate}
+  %% \acro{DCA}{distance at closest approach}
   \acro{DIS}{deep inelastic scattering}
   \acro{EF}{Event Filter}
   \acro{EM}{electromagnetic}
