--- a/bibtex/bib/images.bib
+++ b/bibtex/bib/images.bib
@@ -2,7 +2,7 @@
       author        = "Mobs, Esma",
       title         = "{The CERN accelerator complex - August 2018. Complexe des
                        accélérateurs du CERN - Août 2018}",
-      month         = "Aug",
+      month         = "8",
       year          = "2018",
       reportNumber  = "OPEN-PHO-ACCEL-2018-005",
       url           = "https://cds.cern.ch/record/2636343",
@@ -11,7 +11,7 @@
 @unpublished{Pequenao:1095924,
       author        = "Joao Pequenao",
       title         = "{Computer generated image of the whole ATLAS detector}",
-      month         = "Mar",
+      month         = "3",
       year          = "2008",
       reportNumber  = "CERN-GE-0803012",
       url           = "https://cds.cern.ch/record/1095924",
@@ -20,7 +20,7 @@
       author        = "Joao Pequenao",
       title         = "{Computer generated images of the Pixel, part of the ATLAS
                        inner detector.}",
-      month         = "Mar",
+      month         = "3",
       year          = "2008",
       reportNumber  = "CERN-GE-0803013",
       url           = "https://cds.cern.ch/record/1095925",
@@ -28,7 +28,7 @@
 @unpublished{Pequenao:1095926,
       author        = "Joao Pequenao",
       title         = "{Computer generated image of the ATLAS inner detector}",
-      month         = "Mar",
+      month         = "3",
       year          = "2008",
       reportNumber  = "CERN-GE-0803014",
       url           = "https://cds.cern.ch/record/1095926",
@@ -36,7 +36,7 @@
 @unpublished{Pequenao:1095927,
       author        = "Joao Pequenao",
       title         = "{Computer Generated image of the ATLAS calorimeter}",
-      month         = "Mar",
+      month         = "3",
       year          = "2008",
       reportNumber  = "CERN-GE-0803015",
       url           = "https://cds.cern.ch/record/1095927",
