--- a/bibtex/bib/techreport.bib
+++ b/bibtex/bib/techreport.bib
@@ -229,6 +229,15 @@
       url            = "http://cds.cern.ch/record/616089",
       SLACcitation   = "%%CITATION = CERN-LHCC-2003-022;%%"
 }
+@article{ATLAS:2012jma,
+      title          = "{Performance of the ATLAS Inner Detector Track and Vertex
+                        Reconstruction in the High Pile-Up LHC Environment}",
+      collaboration  = "ATLAS",
+      year           = "2012",
+      reportNumber   = "ATLAS-CONF-2012-042",
+      url            = "http://cds.cern.ch/record/1435196",
+      SLACcitation   = "%%CITATION = ATLAS-CONF-2012-042;%%"
+}
 @article{Bruning:2004ej,
       author         = "Bruning, Oliver S. and Collier, P. and Lebrun, P. and
                         Myers, S. and Ostojic, R. and Poole, J. and Proudlock, P.",
