--- a/bibtex/bib/experiment.bib
+++ b/bibtex/bib/experiment.bib
@@ -57,7 +57,7 @@
   pages = {149--157},
   numpages = {0},
   year = {1933},
-  month = {Feb},
+  month = {2},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRev.43.149},
   url = {https://link.aps.org/doi/10.1103/PhysRev.43.149}
