--- a/bibtex/bib/techreport.bib
+++ b/bibtex/bib/techreport.bib
@@ -291,3 +291,22 @@
       doi            = "10.1088/1742-6596/119/3/032013",
       SLACcitation   = "%%CITATION = 00462,119,032013;%%"
 }
+@article{Duda:1972:UHT:361237.361242,
+ author = {Duda, Richard O. and Hart, Peter E.},
+ title = {Use of the Hough Transformation to Detect Lines and Curves in Pictures},
+ journal = {Commun. ACM},
+ issue_date = {Jan. 1972},
+ volume = {15},
+ number = {1},
+ month = jan,
+ year = {1972},
+ issn = {0001-0782},
+ pages = {11--15},
+ numpages = {5},
+ url = {http://doi.acm.org/10.1145/361237.361242},
+ doi = {10.1145/361237.361242},
+ acmid = {361242},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Hough transformation, colinear points, curve detection, line detection, pattern recognition, picture processing, point-line transformation},
+}
