ambiguity solver and trt extension

--- a/bibtex/bib/techreport.bib
+++ b/bibtex/bib/techreport.bib
@@ -310,3 +310,12 @@
  address = {New York, NY, USA},
  keywords = {Hough transformation, colinear points, curve detection, line detection, pattern recognition, picture processing, point-line transformation},
 }
+@article{Wicke:1998efw,
+      author         = "Wicke, D.",
+      title          = "{A New Algorithm for Solving Tracking Ambiguities}",
+      year           = "1998",
+      reportNumber   = "DELPHI-98-163 PROG 236 TRACK 92",
+      url            = "https://cds.cern.ch/record/2625731",
+      SLACcitation   = "%%CITATION = DELPHI-98-163 PROG 236 TRACK 92;%%"
+}
+
