low pt discussion and references to minbias analyses

--- a/bibtex/bib/techreport.bib
+++ b/bibtex/bib/techreport.bib
@@ -126,6 +126,15 @@
       doi            = "10.1088/1748-0221/3/08/S08006",
       SLACcitation   = "%%CITATION = JINST,3,S08006;%%"
 }
+@Article{Agostinelli:2002hh,
+     author    = "Agostinelli, S. and others",
+     title     = "{GEANT4: A simulation toolkit}",
+     journal   = "Nucl.~Instrum.~Meth.~A",
+     volume    = "506",
+     year      = "2003",
+     doi            = "10.1016/S0168-9002(03)01368-8",
+     pages     = "250"
+}
 @article{Airapetian:1996iv,
       author         = "{ATLAS Collaboration}",
       title          = "{ATLAS calorimeter performance Technical Design Report}",
@@ -309,6 +318,22 @@
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {Hough transformation, colinear points, curve detection, line detection, pattern recognition, picture processing, point-line transformation},
+}
+@article{Gyulassy:1994ew,
+      author         = "Gyulassy, Miklos and Wang, Xin-Nian",
+      title          = "{HIJING 1.0: A Monte Carlo program for parton and
+                        particle production in high-energy hadronic and nuclear
+                        collisions}",
+      journal        = "Comput. Phys. Commun.",
+      volume         = "83",
+      year           = "1994",
+      pages          = "307",
+      doi            = "10.1016/0010-4655(94)90057-4",
+      eprint         = "nucl-th/9502021",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      reportNumber   = "LBL-34246",
+      SLACcitation   = "%%CITATION = NUCL-TH/9502021;%%"
 }
 @article{Wicke:1998efw,
       author         = "Wicke, D.",
