--- a/acronyms.tex
+++ b/acronyms.tex
@@ -23,6 +23,7 @@
   \acro{MC}{Monte Carlo}
   \acro{PS}{Proton Synchrotron}
   \acro{PSB}{Proton Synchrotron Booster}
+  \acro{PV}{primary vertex}
   \acro{QGP}{quark-gluon plasma}
   \acro{QCD}{quantum chromodynamics}
   \acro{RF}{radio frequency}
